# robot-simulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  sonarcloud.yml
app/kalman_filter/: CMakeLists.txt  app_kalman_filter.cpp
modules/perception/: CMakeLists.txt
modules/perception/state_estimation/: CMakeLists.txt
modules/perception/state_estimation/kalman_filter/: CMakeLists.txt
modules/perception/state_estimation/kalman_filter/include/kalman_filter/: kalman_filter.hpp
modules/perception/state_estimation/kalman_filter/src/ekf/: Equation.ipynb  kalman_filter_ekf.cpp
modules/perception/state_estimation/kalman_filter/src/lkf/: Equation.ipynb  kalman_filter_lkf.cpp
modules/perception/state_estimation/kalman_filter/src/ukf/: kalman_filter_ukf.cpp
src/: CMakeLists.txt
src/display/: CMakeLists.txt
src/display/include/display/: display.hpp
src/display/src/: display.cpp
src/model/: CMakeLists.txt
src/model/beacon/: CMakeLists.txt
src/model/beacon/include/beacon/: beacon.hpp
src/model/beacon/src/: beacon.cpp
src/model/robot/: CMakeLists.txt
src/model/robot/include/robot/: robot.hpp
src/model/robot/include/robot/details/: bicycle_model.hpp  motion_cmd.hpp  motion_cmd_base.hpp  robot_state.hpp
src/model/robot/src/: robot.cpp
src/model/robot/src/details/: bicycle_mode.cpp
src/model/sensor/: CMakeLists.txt
src/model/sensor/include/sensor/: gps_sensor.hpp  gyro_sensor.hpp  lidar_sensor.hpp
src/model/sensor/src/: gps_sensor.cpp  gyro_sensor.cpp  lidar_sensor.cpp
src/simulation/: CMakeLists.txt
src/simulation/include/simulation/: simulation.hpp
src/simulation/include/simulation/profile/: simulation_profile.hpp
src/simulation/src/: simulation.cpp
src/simulation/src/profile/: simulation_profile.cpp
utils/: CMakeLists.txt
utils/helper/: CMakeLists.txt
utils/helper/include/helper/: helper.hpp
utils/helper/include/helper/details/: transformation.hpp  types.hpp
utils/helper/src/: helper.cpp
utils/helper/src/details/: transformation.cpp
utils/types/: CMakeLists.txt
